SA-19 QA Fixed scrollbar show throughout the Home and Settings

--- a/components/tailored/core/chatbar/EmojiMart.less
+++ b/components/tailored/core/chatbar/EmojiMart.less
@@ -53,3 +53,15 @@
     width: 100% !important;
   }
 }
+
+.emoji-mart-scroll {
+  overflow-y: auto;
+  // position: relative;
+  
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    display: none;
+    scrollbar-width: none;
+  }
+}
